--- a/README
+++ b/README
@@ -1,16 +1,16 @@
 <!-- vim: syntax=Markdown -->
-# Courtois-NeuroMod: [xxxx subdataset](https://github.com/courtois-neuromod/xxxxx)
+# Courtois-NeuroMod: [retinotopy subdataset](https://github.com/courtois-neuromod/retinotopy)
 ![bids-validator](https://github.com/courtois-neuromod/retinotopy/actions/workflows/bids-validator.yml/badge.svg)
 ![deploy test](https://github.com/courtois-neuromod/retinotopy/actions/workflows/deploy.yml/badge.svg)
 ![deploy latest git-annex branch](https://github.com/courtois-neuromod/retinotopy/actions/workflows/deploy.yml/badge.svg?branch=git-annex)
 
 The [Courtois project on Neural Modelling (Courtois NeuroMod)](https://www.cneuromod.ca/) aims at training artificial neural networks using extensive experimental data on individual human brain activity and behaviour.
 
-Participants *performed task xxx while functional data being acquired in the MRI scanner* . A extensive description can be found [here](https://docs.cneuromod.ca/en/latest/DATASETS.html#xxxx).
+Participants *performed 3 variants of a retinotopic mapping task while functional data being acquired in the MRI scanner* . A extensive description can be found [here](https://docs.cneuromod.ca/en/latest/DATASETS.html#retinotopy).
 
 This subdataset is organized following the [brain imaging data structure (BIDS)](https://bids.neuroimaging.io/) (including extensions in development) and contains:
 - [x] [raw neuroimaging data](https://docs.cneuromod.ca/en/latest/MRI.html#functional-sequences)
-- [ ] behavioral variables in event files
+- [x] behavioral variables in event files
 - [ ] physiological data
   - [ ] ECG
   - [ ] pulse (photoplethysmography)
